[package]
name = "arda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.0"
ferris-says = "0.2"
ethers-core = "1.0.2"
ethers-contract = "1.0.2"
ethers-providers = "1.0.2"
ethers-signers = "1.0.2"
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
